--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ input, div.select{
 	display: inline-block;
 	text-align: center;
 	background: white;
-	font-size: 32px;
+	font-size: 29px;
 	width: 100%;
 	margin: 10px 0;
 	color: #333538;
@@ -125,6 +125,11 @@ div.select{
 	position: relative;
 	cursor: pointer;
 	background: url(../img/select.png) 95% 50% no-repeat white;
+	overflow: hidden;
+}
+div.select span{
+	display: block;
+	width: 80%;
 }
 div.select ul{
 	position: absolute;
@@ -266,6 +271,9 @@ div.items + input[type="submit"].alt-back, input[type="submit"].red-submit{
 }
 div.items + input[type="submit"].alt-back:hover, div.items + input[type="submit"].alt-back:active, input[type="submit"].red-submit:hover, input[type="submit"].red-submit:active{
 	background: #e14938;
+}
+div.select-open{
+	overflow: visible;
 }
 div.select-open ul{
 	height: auto;
