--- a/css/style.css
+++ b/css/style.css
@@ -46,16 +46,24 @@ html, body{
 	font-family: Helvetica;
 	background: #f4f4f1;
 }
+body{
+	padding-top: 40px;
+}
 a{
 	cursor: pointer;
 }
 .wrapper{
 	max-width: 400px;
-	margin: 40px auto 0;
+	margin: 0 auto;
 	padding: 24px 18px;
 	color: white;
 }
 
+span, a{
+	display: block;
+	font-size: 30px;
+	margin: 6px 0;
+}
 table{
 	vertical-align: middle;
 	width: 100%;
@@ -87,7 +95,6 @@ h2{
 }
 .container{
 	margin: 10px 0;
-	overflow: hidden;
 }
 input, div.select, a.button{
 	height: 44px;
