--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,10 @@ div.select{
 }
 div.select span{
 	display: block;
-	width: 80%;
+	width: 100%;
 	margin: 0;
+	background: white;
+	background: url(../img/select.png) 95% 16px no-repeat white;
 }
 div.select ul{
 	position: absolute;
