--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ a{
 	cursor: pointer;
 }
 .wrapper{
-	max-width: 400px;
+	max-width: 500px;
 	margin: 0 auto;
 	padding: 24px 18px;
 	color: white;
@@ -110,7 +110,7 @@ input, div.select, a.submit{
 	vertical-align: top;
 }
 input[type="text"]{
-	width: 99%;
+	width: 100%;
 }
 input[type="text"].numeric{
 	width: 14%;
@@ -292,6 +292,10 @@ div.select-open ul{
 	height: auto;
 	z-index: 1;
 }
+div.select-open span{
+	position: relative;
+	z-index: 2;
+}
 
 .user-found{
 	margin-bottom: 16px;
@@ -336,13 +340,11 @@ div.select-open ul{
 }
 a.add{
 	display: inline-block;
-	background: #ababab;
-	border-radius: 30px;
 	height: 50px;
 	width: 50px;
 	line-height: 50px;
 	font-size: 40px;
 }
 a.add:hover, a.add:active{
-	background: #bababa;
+	color: #d14841;
 }
