--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ a.add{
 	width: 50px;
 	line-height: 50px;
 	font-size: 40px;
+	margin: 0 0 4px;
 }
 a.add:hover, a.add:active{
 	color: #d14841;
